--- a/web/app/partials/enable-flashbands.html
+++ b/web/app/partials/enable-flashbands.html
@@ -1,9 +1,29 @@
-<input type="text" ng-model="myModelObj">
-<input type="file" ng-file-select="onFileSelect($files)">
-<input type="file" ng-file-select="onFileSelect($files)" multiple accept="image/*">
-<div class="button" ng-file-select="onFileSelect($files)" data-multiple="true"></div>
-<div ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="optional-css-class-name-or-function"
-  ng-show="dropSupported">drop files here</div>
-<div ng-file-drop-available="dropSupported=true" 
-  ng-show="!dropSupported">HTML5 Drop File is not supported!</div>
-<button ng-click="upload.abort()">Cancel Upload</button>
+<h1>Cadastrar Pulseiras</h1>
+<div>
+  Você pode cadastrar todo o lote de pulseiras recebidas de uma só vez. 
+</div>
+<div >
+  Para começar, basta escrever o nome do seu lote. Por exemplo: Platena Atlantida 2015 - Lote 1. Depois, é só carregar o arquivo .csv fornecido pela equipe Flashband e salvar.
+</div>
+<div>
+  <a href="#">Não mostrar mais esta mensagem</a>
+</div>
+
+<form role="form">
+  <div class="form-group">
+    <input type="text" class="form-control" ng-model="name" placeholder="Digite o nome do lote de pulseiras">
+  </div>
+  <div class="form-group">
+    <div class="btn btn-default" ng-file-select="onFileSelect($files)" data-multiple="false">Carregar arquivo .csv</div>
+  </div>
+  <div class="form-group">
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+        60%
+      </div>
+    </div>
+    <button type="button" class="btn btn-default btn-xs" ng-click="upload.abort()">Cancelar Upload</button>
+  </div>
+  <button type="button" class="btn btn-default">Cancelar</button>
+  <button type="button" class="btn btn-success">Cadastrar</button>
+</form>
