I18N, Template Structures, tests to enable-flashbands

--- a/web/app/partials/flashbands-upload.html
+++ b/web/app/partials/flashbands-upload.html
@@ -1,6 +1,6 @@
 <h1>Cadastrar Pulseiras</h1>
 <div>
-  Você pode cadastrar todo o lote de pulseiras recebidas de uma só vez. 
+  Você pode cadastrar todo o lote de pulseiras recebidas de uma só vez.
 </div>
 <div >
   Para começar, basta escrever o nome do seu lote. Por exemplo: Platena Atlantida 2015 - Lote 1. Depois, é só carregar o arquivo .csv fornecido pela equipe Flashband e salvar.
@@ -25,5 +25,7 @@
     <button type="button" class="btn btn-default btn-xs" ng-click="upload.abort()">Cancelar Upload</button>
   </div>
   <button type="button" class="btn btn-default">Cancelar</button>
-  <button type="button" class="btn btn-success">Cadastrar</button>
+  <a class="btn btn-success" ui-sref="finish-flashbands" role="button">Cadastrar</a>
 </form>
+
+
