--- a/web/app/styles/main.scss
+++ b/web/app/styles/main.scss
@@ -1,14 +1,7 @@
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+body {
+  min-height: 2000px;
 }
 
-.thumbnail {
-  height: 200px;
-
-  img.pull-right {
-    width: 50px;
-  }
+.navbar-static-top {
+  margin-bottom: 19px;
 }
