test to cancel enable-falshbands form

--- a/web/app/partials/flashbands-upload.html
+++ b/web/app/partials/flashbands-upload.html
@@ -26,7 +26,7 @@
     </div>
     <button type="button" class="btn btn-default btn-xs" ng-click="upload.abort()">Cancelar Upload</button>
   </div>
-  <button type="button" class="btn btn-default">Cancelar</button>
+  <a type="button" class="btn btn-link" ui-sref="enable-flashbands" translate="FLASHBAND.ENABLE.CANCEL"></a>
   <button type="submit" class="btn btn-success" translate="FLASHBAND.ENABLE.SAVE"></button>
 </form>
 
