WerbAPP: Coverage of unit tests and E2E for import of flashbands.

--- a/web/app/partials/flashbands-enable.html
+++ b/web/app/partials/flashbands-enable.html
@@ -1,5 +1,10 @@
+<div ng-show="messageSuccess" class="alert alert-success" role="alert" translate="FLASHBAND.MESSAGE.SUCCESS"></div>
+
 <h1 translate="FLASHBAND.ENABLE.TITLE"></h1>
-<p translate="FLASHBAND.ENABLE.TEXT"></p>
+
+<p ng-hide="totFlashbands" translate="FLASHBAND.ENABLE.TEXT"></p>
+<p ng-show="totFlashbands" translate="FLASHBAND.MESSAGE.TOTAL" translate-values="{totalFlashbands: totFlashbands}"></p>
+
 <p>
   <a class="btn btn-success" ui-sref="upload-flashbands" role="button" translate="FLASHBAND.ENABLE.BUTTON"></a>
 </p>
