webapp sending uploads to enable flashbands

--- a/web/app/partials/flashbands-enable.html
+++ b/web/app/partials/flashbands-enable.html
@@ -1,4 +1,4 @@
-<div ng-show="messageSuccess" class="alert alert-success" role="alert" translate="FLASHBAND.MESSAGE.SUCCESS"></div>
+<div ng-show="messageSuccess" class="alert alert-success" role="alert" translate-values="{totalFlashbands: totFlashbands}" translate="FLASHBAND.MESSAGE.SUCCESS"></div>
 
 <h1 translate="FLASHBAND.ENABLE.TITLE"></h1>
 
