BugFix messagens and actions for logout

--- a/web/app/partials/flashbands-upload.html
+++ b/web/app/partials/flashbands-upload.html
@@ -1,4 +1,4 @@
-<div ng-show="message" class="alert alert-{{message.type}}" translate="{{message.text}}"></div>
+<div ng-show="message" class="alert alert-{{message.type}}">{{message.text | translate}}</div>
 
 <h1 translate="FLASHBAND.ENABLE.TITLE"></h1>
 <p translate="FLASHBAND.UPLOAD.TEXT"></p>
