--- a/web/app/partials/dashboard.html
+++ b/web/app/partials/dashboard.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Flashband</a>
+      <a class="navbar-brand" ui-sref="dashboard">Flashband</a>
     </div>
 
     <flashband-menu></flashband-menu>
