--- a/web/app/partials/showgoer-new.html
+++ b/web/app/partials/showgoer-new.html
@@ -13,6 +13,10 @@
     <select ng-model="showgoer.doctype" name="doctype" required ng-options="doc.type as doc.name for doc in docTypes"></select>
   </div>
 
+  <div class="form-group" ng-show="showgoer.doctype">
+    <input type="text" class="form-control" required ng-model="showgoer.docnumber" name="docnumber">
+  </div>
+
   <a type="button" class="btn btn-link" ui-sref="enable-flashbands" translate="FLASHBAND.SHOWGOER.CANCEL"></a>
   <button type="submit" class="btn btn-success" translate="FLASHBAND.SHOWGOER.SAVE"></button>
 </form>
