Test for view Showgoer successfully

--- a/web/app/partials/showgoer-new.html
+++ b/web/app/partials/showgoer-new.html
@@ -4,7 +4,7 @@
 
 <br>
 
-<form role="form" ng-submit="">
+<form role="form" ng-submit="saveShowgoer()">
   <div class="form-group">
     <input type="text" class="form-control" required ng-model="showgoer.name" name="name" placeholder="{{'FLASHBAND.SHOWOGER.PLACEHOLDER' | translate}}">
   </div>
