--- a/web/app/partials/showgoer-start.html
+++ b/web/app/partials/showgoer-start.html
@@ -1,3 +1,5 @@
+<div ng-show="message" class="alert alert-{{message.type}}" role="{{message.type}}">{{message.text|translate}}</div>
+
 <h1 translate="FLASHBAND.SHOWGOER.TITLE"></h1>
 
 <p ng-hide="totFlashbands" translate="FLASHBAND.SHOWGOER.TEXT"></p>
