--- a/web/app/partials/showgoer-new.html
+++ b/web/app/partials/showgoer-new.html
@@ -1,10 +1,12 @@
+<div ng-show="message" class="alert alert-{{message.type}}" role="{{message.type}}">{{message.text|translate}}</div>
+
 <h1 translate="FLASHBAND.SHOWGOER.TITLE"></h1>
 
 <p translate="FLASHBAND.SHOWGOER.NEW"></p>
 
 <br>
 
-<form role="form" ng-submit="saveShowgoer()">
+<form role="form" ng-submit="saveShowgoer()" name="showgoerForm" novalidate>
   <div class="form-group">
     <input type="text" class="form-control" required ng-model="showgoer.name" name="name" placeholder="{{'FLASHBAND.SHOWOGER.PLACEHOLDER' | translate}}">
   </div>
