--- a/web/app/partials/showgoer-new.html
+++ b/web/app/partials/showgoer-new.html
@@ -6,19 +6,19 @@
 
 <br>
 
-<form role="form" ng-submit="saveShowgoer()" name="showgoerForm" novalidate>
+<form novalidate ng-submit="saveShowgoer()" name="showgoerForm">
   <div class="form-group">
-    <input type="text" class="form-control" required ng-model="showgoer.name" name="name" placeholder="{{'FLASHBAND.SHOWOGER.PLACEHOLDER' | translate}}">
+    <input type="text" class="form-control" required ng-model="showgoer.name" name="name" placeholder="{{'FLASHBAND.SHOWGOER.PLACEHOLDER.NAME'|translate}}">
   </div>
 
   <div class="form-group">
-    <select ng-model="showgoer.doctype" name="doctype" required ng-options="doc.type as doc.name for doc in docTypes"></select>
+    <select ng-model="showgoer.doctype" name="doctype" ng-required="true" ng-options="doc.type as (doc.name|translate) for doc in docTypes"></select>
   </div>
 
   <div class="form-group" ng-show="showgoer.doctype">
-    <input type="text" class="form-control" required ng-model="showgoer.docnumber" name="docnumber">
+    <input type="text" class="form-control" ng-required="true" ng-model="showgoer.docnumber" name="docnumber" placeholder="{{'FLASHBAND.SHOWGOER.PLACEHOLDER.DOCNUMBER.'.concat(showgoer.doctype)|translate}}">
   </div>
 
-  <a type="button" class="btn btn-link" ui-sref="enable-flashbands" translate="FLASHBAND.SHOWGOER.CANCEL"></a>
+  <a type="button" class="btn btn-link" ui-sref="showgoer" translate="FLASHBAND.SHOWGOER.CANCEL"></a>
   <button type="submit" class="btn btn-success" translate="FLASHBAND.SHOWGOER.SAVE"></button>
 </form>
