Showgoer associate view

--- a/web/app/partials/showgoer-start.html
+++ b/web/app/partials/showgoer-start.html
@@ -2,11 +2,10 @@
 
 <h1 translate="FLASHBAND.SHOWGOER.TEXT.TITLE"></h1>
 
-
 <p ng-hide="totShowgoers" translate="FLASHBAND.SHOWGOER.TEXT.START"></p>
 <p ng-show="totShowgoers" translate="FLASHBAND.SHOWGOER.TEXT.CREATED" translate-values="{totalShowgoers: totShowgoers, plural: ((totShowgoers <= 1) ? '' : 's')}"></p>
 
 <p>
-  <a class="btn btn-success" ui-sref="showgoer-new" role="button" translate="FLASHBAND.SHOWGOER.BUTTON.NEW"></a>
-  <a ng-show="totShowgoers" class="btn btn-success" ui-sref="showgoer-new" role="button" translate="FLASHBAND.SHOWGOER.BUTTON.ASSOCIATE"></a>
+  <a class="btn btn-success" ui-sref="showgoer-new"     role="button" translate="FLASHBAND.SHOWGOER.BUTTON.NEW"></a>
+  <a class="btn btn-success" ui-sref="associate-search" role="button" translate="FLASHBAND.SHOWGOER.BUTTON.ASSOCIATE" ng-show="totShowgoers"></a>
 </p>
