--- a/web/app/partials/showgoer-new.html
+++ b/web/app/partials/showgoer-new.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="form-group">
-    <select ng-model="showgoer.doctype" name="doctype" ng-required="true" ng-options="doc.type as (doc.name|translate) for doc in docTypes"></select>
+    <select class="form-control" ng-model="showgoer.doctype" name="doctype" ng-required="true" ng-options="doc.type as (doc.name|translate) for doc in docTypes"></select>
   </div>
 
   <div class="form-group" ng-show="showgoer.doctype">
