--- a/web/app/partials/showgoer-start.html
+++ b/web/app/partials/showgoer-start.html
@@ -6,6 +6,6 @@
 <p ng-show="totShowgoers" translate="FLASHBAND.SHOWGOER.TEXT.CREATED" translate-values="{totalShowgoers: totShowgoers, plural: ((totShowgoers <= 1) ? '' : 's')}"></p>
 
 <p>
-  <a class="btn btn-success" ui-sref="showgoer-new"     role="button" translate="FLASHBAND.SHOWGOER.BUTTON.NEW"></a>
-  <a class="btn btn-success" ui-sref="associate-search" role="button" translate="FLASHBAND.SHOWGOER.BUTTON.ASSOCIATE" ng-show="totShowgoers"></a>
+  <a class="btn btn-success" ui-sref="showgoer-new"    role="button" translate="FLASHBAND.SHOWGOER.BUTTON.NEW"></a>
+  <a class="btn btn-success" ui-sref="showgoer-search" role="button" translate="FLASHBAND.SHOWGOER.BUTTON.ASSOCIATE" ng-show="totShowgoers"></a>
 </p>
