--- a/web/app/partials/showgoer-search.html
+++ b/web/app/partials/showgoer-search.html
@@ -1,3 +1,5 @@
+<div ng-show="message" class="alert alert-{{message.type}}" role="{{message.type}}">{{message.text|translate}}</div>
+
 <h1 translate="FLASHBAND.ASSOCIATE.TEXT.TITLE"></h1>
 
 <p translate="FLASHBAND.ASSOCIATE.TEXT.NEW"></p>
@@ -39,4 +41,4 @@
 </div>
 
 <a type="button" class="btn btn-link" ui-sref="showgoer" translate="FLASHBAND.ASSOCIATE.BUTTON.CANCEL"></a>
-<button ng-disabled="!listShowgoers.length || !showGoerSelected" type="submit" class="btn btn-success" ng-click="associateShowGoer()" translate="FLASHBAND.ASSOCIATE.BUTTON.ASSOCIATE"></button>
+<button ng-disabled="!listShowgoers.length || !showGoerSelected || showGoerSelected.flashband" type="submit" class="btn btn-success" ng-click="associateShowGoer()" translate="FLASHBAND.ASSOCIATE.BUTTON.ASSOCIATE"></button>
