--- a/web/app/partials/showgoer-search.html
+++ b/web/app/partials/showgoer-search.html
@@ -41,6 +41,10 @@
   </div>
 </div>
 
+<div ng-show="showGoerSelected && !showGoerSelected.flashband" class="form-group">
+  <input required ng-model="flashbandTag" name="flashbandTag" type="text" class="form-control" placeholder="{{'FLASHBAND.ASSOCIATE.PLACEHOLDER.TAG'|translate}}">
+</div>
+
 <div class="panel panel-default" ng-show="showMessageNewShowGoer">
   <div class="panel-body new-showgoer-message">
     {{'FLASHBAND.ASSOCIATE.MESSAGES.SHOWGOER'|translate}}
@@ -49,4 +53,4 @@
 </div>
 
 <a type="button" class="btn btn-link" ui-sref="showgoer" translate="FLASHBAND.ASSOCIATE.BUTTON.CANCEL"></a>
-<button ng-disabled="!listShowgoers.length || !showGoerSelected || showGoerSelected.flashband" type="submit" class="btn btn-success" ng-click="associateShowGoer()" translate="FLASHBAND.ASSOCIATE.BUTTON.ASSOCIATE"></button>
+<button ng-disabled="!listShowgoers.length || !showGoerSelected || showGoerSelected.flashband && flashbandTag" type="submit" class="btn btn-success" ng-click="associateShowGoer()" translate="FLASHBAND.ASSOCIATE.BUTTON.ASSOCIATE"></button>
