Label to flashband number

--- a/web/app/partials/showgoer-search.html
+++ b/web/app/partials/showgoer-search.html
@@ -42,6 +42,7 @@
 </div>
 
 <div ng-show="showGoerSelected && !showGoerSelected.flashband" class="form-group">
+  <label>Flashband</label>
   <input required ng-model="flashbandTag" name="flashbandTag" type="text" class="form-control" placeholder="{{'FLASHBAND.ASSOCIATE.PLACEHOLDER.TAG'|translate}}">
 </div>
 
