--- a/web/app/partials/dashboard.html
+++ b/web/app/partials/dashboard.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-static-top" role="navigation">
+<div class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" ui-sref="dashboard">Flashband</a>
