reading flashband usina flashband-chromeapp

--- a/web/app/partials/showgoer-search.html
+++ b/web/app/partials/showgoer-search.html
@@ -54,4 +54,4 @@
 </div>
 
 <a type="button" class="btn btn-link" ui-sref="showgoer" translate="FLASHBAND.ASSOCIATE.BUTTON.CANCEL"></a>
-<button ng-disabled="!listShowgoers.length || !showGoerSelected || showGoerSelected.flashband && flashbandTag" type="submit" class="btn btn-success" ng-click="associateShowGoer()" translate="FLASHBAND.ASSOCIATE.BUTTON.ASSOCIATE"></button>
+<button ng-disabled="!listShowgoers.length || !showGoerSelected || showGoerSelected.flashband && flashbandTag" type="button" class="btn btn-success" ng-click="associateShowGoer()" translate="FLASHBAND.ASSOCIATE.BUTTON.ASSOCIATE"></button>
