should list all showgoers

--- a/web/app/partials/status.html
+++ b/web/app/partials/status.html
@@ -5,19 +5,17 @@
     <table id="showgoers-list" class="table table-bordered">
       <thead>
         <tr>
-          <!-- <th style="text-align: center" translate="FLASHBAND.ASSOCIATE.TABLE.SEL"></th>
-          <th style="text-align: center" translate="FLASHBAND.ASSOCIATE.TABLE.NAME"></th>
-          <th style="text-alig  n: center" translate="FLASHBAND.ASSOCIATE.TABLE.DOCTYPE"></th>
-          <th style="text-align: center" translate="FLASHBAND.ASSOCIATE.TABLE.DOCNUMBER"></th> -->
+          <th>
+            Nome
+          </th>
         </tr>
       </thead>
 
       <tbody>
         <tr ng-repeat="sg in listShowgoers">
-          <!-- <td style="text-align: center"><input name="showGoerId" ng-value="sg.id" ng-click="changeShowGoer(sg)" type="radio"></td>
-          <td>{{sg.name}}</td>
-          <td style="text-align: center">{{"FLASHBAND.SHOWGOER.DOCTYPE.".concat(sg.docType.toUpperCase())|translate}}</td>
-          <td style="text-align: right">{{sg.docNumber}}</td> -->
+          <td>
+            {{sg.name}}
+          </td>
         </tr>
       </tbody>
     </table>
