--- a/web/app/partials/status.html
+++ b/web/app/partials/status.html
@@ -1,21 +1,52 @@
 <h1 translate="FLASHBAND.STATUS.TEXT.TITLE" translate-values="{count: totFlashbands}"></h1>
 
 <div class="form-group">
+  <div class="row">
+    <div class="col-xs-3">
+      <div class="btn-group" data-toggle="buttons" ng-init="filterShowgoer = 'A'">
+        <label class="btn btn-default" ng-class="{active: filterShowgoer == 'A'}">
+          <input ng-model="filterShowgoer" name="filterShowgoer" value="A" type="radio">
+          <span class="glyphicon glyphicon-globe"></span> Todos
+        </label>
+
+        <label class="btn btn-default" ng-class="{active: filterShowgoer == 'V'}">
+          <input ng-model="filterShowgoer" name="filterShowgoer" value="V" type="radio">
+          <span class="glyphicon glyphicon-user"></span> Vips
+        </label>
+      </div>
+    </div>
+
+    <div class="col-xs-3">
+      <select class="form-control">
+        <option>Todas as Áreas</option>
+        <option>Área 1</option>
+        <option>Área 2</option>
+        <option>Área 3</option>
+        <option>Área 4</option>
+        <option>Área 5</option>
+      </select>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
   <div class="table-responsive">
-    <table id="showgoers-list" class="table table-bordered">
+    <table datatable="ng" dt-options="dtOptions" id="showgoers-list" class="table table-striped table-bordered">
       <thead>
         <tr>
-          <th>
-            Nome
-          </th>
+          <th>Nome</th>
+          <th>Documento</th>
+          <th>Telefone</th>
+          <th>Status</th>
         </tr>
       </thead>
 
       <tbody>
         <tr ng-repeat="sg in listShowgoers">
-          <td>
-            {{sg.name}}
-          </td>
+          <td>{{sg.name}}</td>
+          <td>{{"FLASHBAND.SHOWGOER.DOCTYPE.".concat(sg.docType.toUpperCase())|translate}}: {{sg.docNumber}}</td>
+          <td>{{sg.phone}}</td>
+          <td>{{sg.status}}</td>
         </tr>
       </tbody>
     </table>
