--- a/web/app/partials/showgoer-new.html
+++ b/web/app/partials/showgoer-new.html
@@ -12,6 +12,14 @@
   </div>
 
   <div class="form-group">
+    <input type="text" class="form-control" ng-model="showgoer.phone" name="phone" placeholder="{{'FLASHBAND.SHOWGOER.PLACEHOLDER.PHONE'|translate}}">
+  </div>
+
+  <div class="form-group">
+    <select class="form-control" ng-model="showgoer.vip" name="vip" ng-options="vip as ('FLASHBAND.SHOWGOER.VIP.'.concat(vip).toUpperCase()|translate) for vip in [false, true]"></select>
+  </div>
+
+  <div class="form-group">
     <select class="form-control" ng-model="showgoer.docType" name="docType" ng-required="true" ng-options="doc.type as (doc.name|translate) for doc in docTypes"></select>
   </div>
 
