--- a/web/app/partials/status.html
+++ b/web/app/partials/status.html
@@ -1,6 +1,8 @@
 <h1 translate="FLASHBAND.STATUS.TEXT.TITLE" translate-values="{count: totFlashbands}"></h1>
 
-<div class="form-group">
+  {{listShowgoers}}
+
+<!-- <div class="form-group">
   <div class="row">
     <div class="col-xs-3">
       <div class="btn-group" data-toggle="buttons" ng-init="vipParam = false">
@@ -20,11 +22,11 @@
       <select ng-model="zoneParam" class="form-control" ng-options="zone.id as zone.name for zone in zones"></select>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="form-group">
   <div class="table-responsive">
-    <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" id="showgoers-list" class="table table-striped table-bordered hover"></table>
+    <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" id="showgoers-list" class="table table-striped table-bordered hover"></table> -->
 
     <!-- <table datatable="ng" dt-options="dtOptions" dt-column-defs="dtColumnDefs"  class="table table-striped table-bordered">
       <thead>
